Commit to consumers on shutdown